@@ -66,9 +66,11 @@ esac
 AM_CONDITIONAL(WINDOWS, test "$windows" = "yes")
 
 PKG_PROG_PKG_CONFIG
+have_gtk3=no
 PKG_CHECK_EXISTS(gtkmm-3.0 >= 2.99,
-        [PKG_CHECK_MODULES(GTKMM, gtkmm-3.0)],
+        [PKG_CHECK_MODULES(GTKMM, gtkmm-3.0, have_gtk3=yes)],
         [PKG_CHECK_MODULES(GTKMM, gtkmm-2.4 >= 2.8 gthread-2.0 cairomm-1.0)])
+AM_CONDITIONAL(HAVE_GTK3, [test "$have_gtk3" = "yes"])
 
 PKG_CHECK_MODULES(GIG, gig >= 3.3.0)
 
